--- a/src/main/resources/static/docker-compose-local.yml
+++ b/src/main/resources/static/docker-compose-local.yml
@@ -25,10 +25,10 @@ services:
   rabbitmq:
     image: rabbitmq:latest
     container_name: oneday-rabbitmq
-    volumes:
-      - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
-      - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
-      - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
+#    volumes:
+#      - ./.docker/rabbitmq/etc/:/etc/rabbitmq/
+#      - ./.docker/rabbitmq/data/:/var/lib/rabbitmq/
+#      - ./.docker/rabbitmq/logs/:/var/log/rabbitmq/
     ports:
       - "5672:5672" # default port
       - "15672:15672" # management port
